New Code Addition

--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
-name = "project1"
+name = "project4"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi[standard]>=0.121.1",
     "sqlalchemy>=2.0.44",
 ]
