--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -5,6 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "argon2-cffi>=25.1.0",
+    "bcrypt>=5.0.0",
     "fastapi[standard]>=0.121.1",
+    "multipart>=1.3.0",
+    "passlib>=1.7.4",
+    "python-jose>=3.5.0",
+    "python-multipart>=0.0.20",
+    "requests>=2.32.5",
+    "requests-toolbelt>=1.0.0",
     "sqlalchemy>=2.0.44",
 ]
