--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi[standard]>=0.121.1",
     "multipart>=1.3.0",
     "passlib>=1.7.4",
+    "psycopg2>=2.9.11",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
