--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "passlib>=1.7.4",
     "psycopg2>=2.9.11",
     "pymysql>=1.1.2",
+    "pytest>=9.0.1",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
