--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "psycopg2>=2.9.11",
     "pymysql>=1.1.2",
     "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
