--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "alembic>=1.17.2",
     "argon2-cffi>=25.1.0",
     "bcrypt>=5.0.0",
+    "coloredlogs>=15.0.1",
+    "colorlog>=6.10.1",
     "fastapi[standard]>=0.121.1",
     "multipart>=1.3.0",
     "passlib>=1.7.4",
@@ -16,6 +18,7 @@ dependencies = [
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
     "python-jose>=3.5.0",
+    "python-json-logger>=4.0.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "requests-toolbelt>=1.0.0",
