--- a/Project4/pyproject.toml
+++ b/Project4/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiofiles>=25.1.0",
     "alembic>=1.17.2",
     "argon2-cffi>=25.1.0",
     "bcrypt>=5.0.0",
     "coloredlogs>=15.0.1",
     "colorlog>=6.10.1",
     "fastapi[standard]>=0.121.1",
+    "jinja2>=3.1.6",
     "multipart>=1.3.0",
     "passlib>=1.7.4",
     "psycopg2>=2.9.11",
